# Dissertation

./: .gitignore  .gitmodules  Cargo.toml  references.bib
.github/workflows/: test.yaml  thesis.yaml
Archive/Expose/: expose.tex
Expose/: expose.tex
Playground/Julia/: Manifest.toml  dae.jl  deser.jl
Playground/Simulation/: Project.toml  net.json  run.jl  runtests.jl
Playground/oldSimulation/: Cargo.toml  data
Playground/rimulation/: Cargo.toml
Survey/: survey.bbl-SAVE-ERROR  survey.bcf-SAVE-ERROR  survey.tex
Thesis/: Dissertation_Weik.tex  thesis.tex
Thesis/Chapters/: main.tex
Thesis/Endmatter/: curriculum.tex  lebenslauf.tex  main.tex
Thesis/Frontmatter/: abstract.tex  acknowledgements.tex  main.tex  publications.tex  titlepage.tex  zusammenfassung.tex
Thesis/chapters/: one.tex
rimulation/: Cargo.toml
rimulation/data/custom_format/: scenario.json  topology.json
rimulation/data/fixed_velocity/single_pipe/: scenario.json  topology.json
rimulation/data/fixed_velocity/triangle/: parameters.json  result  scenario.json  topology.json
rimulation/data/proprietary_format/: topology.json
rimulation/data/running_example/: parameters.json  topology.json
rimulation/src/: lib.rs  main.rs  transition.rs  water.rs
rimulation/src/output/: mod.rs
rimulation/src/recover/: mod.rs
rimulation/src/simulation/: hydraulic.rs  matrices.rs  mod.rs
rimulation/src/types/formats/: mod.rs
rimulation/src/types/formats/custom/: mod.rs  test_util.rs
rimulation/src/types/network/: mod.rs  test.rs
rimulation/src/types/signal/: mod.rs  test.rs
(+74 files in other folders)
