[package]
name = "rimulation"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.97"
approx = "0.5.1"
clap = { version = "4.5.32", features = ["derive"] }
csv = "1.3.1"
nalgebra = "0.33.2"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
